<resources>
    <string name="app_name">RD Smart Tax</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_13digi_1">Login</string>
    <string name="login_13digi_2">ใส่เลข 13 หลัก</string>
    <string name="login_13digi_3">เข้าสู่ระบบ ,.Login</string>
    <string name="login_13digi_4">ลงทะเบียน ,.Register</string>
    <string name="login_13digi_5">ลืมรหัสผ่าน ,.Forget Password</string>
    <string name="login_13digi_6">คำแนะนำการใช้งาน ,.instructions</string>
    <string name="main_menu_1">main_menu_1</string>
    <string name="txPassword">รหัสผ่าน ,.Password</string>
    <string name="txLastAccessed">เข้าใช้ครั้งล่าสุด : ,.Last Acccess : </string>
    <string name="lang_th_Label_user_profile_Topic">ข้อมูลผู้ใช้ ,.Profile</string>
    <string name="lang_th_Label_user_profile_middlename_list1">นาย</string>
    <string name="lang_th_Label_user_profile_middlename_list2">นางสาว</string>
    <string name="lang_th_Label_user_profile_middlename_list3">นาง</string>
    <string name="lang_th_Label_user_profile_middlename_list4">จ.ส.ต</string>
    <string name="lang_th_Label_user_profile_middlename_list5">จ.ส.ท</string>
    <string name="lang_th_Label_user_profile_middlename_list6">จ.ส.อ</string>
    <string name="lang_th_Label_user_profile_name">ชื่อ</string>
    <string name="lang_th_Label_user_profile_middlename">ชื่อกลาง</string>
    <string name="lang_th_Label_user_profile_surname">ชื่อสกุล</string>
    <string name="lang_th_Label_user_profile_telephone">เบอร์ โทรศัพท์</string>
    <string name="lang_th_Label_user_profile_email">อีเมลผู้เสียภาษี</string>
    <string name="lang_th_Label_user_profile_incomePayer">เลขประจำตัวผู้เสียภาษี อากร ของผู้จ่ายเงินได้</string>
    <string name="lang_th_Label_user_profile_passsportNo">เลขที่หนังสือเดินทางของผู้เสียภาษี</string>
    <string name="lang_th_Label_user_profile_countryCode">รหัสประเทศ หนังสือเดิน รหัสจะกำหนดโดย บอ.</string>
    <string name="lang_th_Label_user_profile_buildName">ชื่ออาคาร</string>
    <string name="lang_th_Label_user_profile_roomNo">ห้องเลขที่</string>
    <string name="lang_th_Label_user_profile_floorNo">ชั้นที่</string>
    <string name="lang_th_Label_user_profile_addressNo">บ้านเลขที่</string>
    <string name="lang_th_Label_user_profile_soi">ตรอก/ซอย</string>
    <string name="lang_th_Label_user_profile_village">ชื่อหมูบ้าน</string>
    <string name="lang_th_Label_user_profile_mooNo">หมูที่</string>
    <string name="lang_th_Label_user_profile_street">ถนน</string>
    <string name="lang_th_Label_user_profile_province">จังหวัด</string>
    <string name="lang_th_Label_user_profile_amphur">อำเภอ</string>
    <string name="lang_th_Label_user_profile_tambol">ตำบล</string>
    <string name="lang_th_Label_user_profile_postcode">รหัสไปรษณีย์</string>
    <string name="lang_th_Label_user_profile_taxpayerStatus">สถานภาพผู้มีเงินได้ (รหัส)</string>
    <string name="lang_th_Label_user_profile_spouseStatus">สถานภาพคู่สมรส (รหัส)</string>
    <string name="lang_th_Label_user_profile_marryStatus">สถานภาพการสมรส (รหัส)</string>
    <string name="lang_th_Label_user_profile_spouseNid">เลขประจำตัวคู่สมรส (13 หลัก)</string>
    <string name="lang_th_Label_user_profile_titleName">คำนำหน้าชื่อ</string>
    <string name="lang_th_Label_user_profile_spouseName">ชื่อคู่สมรส</string>
    <string name="lang_th_Label_user_profile_spouseSurname">ชื่อสกุลคู่สมรส</string>
    <string name="lang_th_Label_user_profile_spouseBirthDate">วันเดือนปีเกิด คู่สมรส</string>
    <string name="lang_th_Label_user_profile_spousePassportNo">เลขที่หนังสือเดินทางคู่ สมรส (กรณีต่างชาติ)</string>
    <string name="lang_th_Label_user_profile_spouseCountryCode">รหัสประเทศ หนังสือเดินทางคู่สมรส (กรณีต่างชาติ)
</string>
    <string name="lang_th_Label_user_profile_txpFatherPin">เลขประจำตัวประชาชนบิดา ผู้มีเงินได้</string>
    <string name="lang_th_Label_user_profile_txpMotherPin">เลขประจำตัวประชาชนมารดา ผู้มีเงินได้</string>
    <string name="lang_th_Label_user_profile_childNoStudy">จำนวนบุตรที่ไม่ได้ ศึกษา</string>
    <string name="lang_th_Label_user_profile_childStudy">จำนวนบุตรที่ศึกษา</string>
    <string name="lang_th_Label_user_profile_submit">บันทึก</string>
    <string name="lang_th_Label_user_profile_validate_etName"></string>
    <string name="txNext">Next</string>
    <string name="txEfilling">E-Filling</string>
    <string name="txInSystem">เข้าสู่ระบบ</string>
    <string name="txForgotPassword">ลืมรหัสผ่าน,.Forget Password</string>
    <string name="lang_th_loginefilling_btTaxCalc">บริการจัดการภาษี</string>
    <string name="txNid">แสดงเลขประจำตัวประชาชน/เลขประจำตัวผู้เสียภาษีอากร</string>
    <string name="lang_th_forgetpassword_step1_topic">ลืมรหัสผ่าน ,.Forget Password</string>
    <string name="lang_th_forgetpassword_step1_label_idcityzen">เลขประจำตัวประชาชน / เลขประจำตัวผู้เสียภาษีอากร</string>
    <string name="lang_th_forgetpassword_step1_label_birthdate">วันเดือนปีที่เกิด</string>
    <string name="lang_th_forgetpassword_step1_button_submit">ยืนยันข้อมูล</string>
    <string name="lang_th_forgetpassword_have_email_label_email">ระบบจะส่งรหัสใหม่ไปยัง E-mail ของท่าน</string>
    <string name="lang_th_forgetpassword_have_email_button_submit">ยืนยันข้อมูล</string>
    <string name="lang_th_forgetpassword_no_have_email_label_quesetion">คำถาม</string>
    <string name="lang_th_forgetpassword_no_have_email_label_answer">คำตอบ</string>
    <string name="lang_th_forgetpassword_no_have_email_button_submit">ยืนยันข้อมูล</string>
    <string name="lang_th_forgetpassword_have_email_goto_forgetquestion">ลืมคำถาม</string>
    <string name="lang_th_forgetpassword_no_have_email_hint_answer">กรุณาระบุคำตอบ</string>
    <string name="lang_th_forgetpassword_no_have_email_question1">สถานที่เกิดของท่านคือที่ใด</string>
    <string name="lang_th_forgetpassword_no_have_email_question2">สถานที่ใดที่ท่านชอบไปมากที่สุด</string>
    <string name="lang_th_forgetpassword_no_have_email_question3">ท่านพบกับคู่สมรสของท่านครั้งแรกที่ใด</string>
    <string name="lang_th_forgetpassword_no_have_email_question4">โรงเรียนแรกของท่านชื่ออะไร</string>
    <string name="lang_th_forgetpassword_no_have_email_question5">สัญลักษณ์ของโรงเรียนมัธยมของท่านคืออะไร</string>
    <string name="lang_th_forgetpassword_no_have_email_question6">ใครคือผู้ที่ท่านชื่นชอบมากที่สุด</string>
    <string name="lang_th_forgetpassword_no_have_email_question7">สัตว์เลี้ยงตัวโปรดของท่านชื่ออะไร</string>
    <string name="lang_th_forgetpassword_no_have_email_question8">กีฬาที่ท่านโปรดปรานที่สุดคืออะไร</string>
    <string name="lang_th_forgetpassword_no_have_email_question9">ทีมกีฬาใดที่ท่านชอบมากที่สุด</string>
    <string name="lang_th_forgetpassword_no_have_email_question10">ท่านชอบสีอะไรมากที่สุด</string>
    <string name="lang_th_forgetpassword_no_have_email_question11">งานอดิเรกที่ท่านชอบมากที่สุดคืออะไร</string>
    <string name="lang_th_forgetpassword_no_have_email_question12">รถยนต์หรือจักรยานคันแรกของท่านยี่ห้ออะไร</string>
    <string name="lang_th_forgetpassword_no_have_email_step2_label_newpassword">รหัสผ่าน</string>
    <string name="lang_th_forgetpassword_no_have_email_step2_label_newpasswordagain">รหัสผ่านใหม่</string>
    <string name="lang_th_forgetpassword_no_have_email_step2_button_submit">ยืนยันข้อมูล</string>
    <string name="lang_th_forgetpassword_no_have_email_step2_detail">** ระบบแสดงบางส่วนของ E-mail เท่านั้น **</string>
    <string name="lang_th_forgetpassword_forgetquestion_label_topic">ยืนยันตัวตน</string>
    <string name="lang_th_forgetpassword_forgetquestion_label_name">ชื่อ (ไม่ต้องมีคำนำหน้าชื่อ)</string>
    <string name="lang_th_forgetpassword_forgetquestion_label_sername">ชื่อ สกุล</string>
    <string name="lang_th_forgetpassword_forgetquestion_label_fathername">ชื่อ สกุล บิดา (ไม่ต้องมีคำนำหน้าชื่อ)</string>
    <string name="lang_th_forgetpassword_forgetquestion_label_mothername">ชื่อ สกุล มารดา (ไม่ต้องมีคำนำหน้าชื่อ)</string>
    <string name="lang_th_forgetpassword_forgetquestion_message_btHintThaiName">โปรดใส่ชื่อ</string>
    <string name="lang_th_forgetpassword_forgetquestion_message_btHintThaiSername">โปรดใส่ชื่อสกุล</string>
    <string name="lang_th_forgetpassword_forgetquestion_message_btHintFatherName">โปรดใส่ชื่อสกุลคุณพ่อ</string>
    <string name="lang_th_forgetpassword_forgetquestion_message_btHintMotherName">โปรดใส่ชื่อสกุลคุณแม่</string>
    <string name="lang_th_forgetpassword_forgetquestion_button_submit">ยืนยันข้อมูล</string>
       <string name="label_old_password">รหัสผ่านเก่า ,.old password</string>
    <string name="lang_th_resetpasswordwithnid_label_topic">ตั้งรหัสผ่านใหม่</string>
    <string name="lang_th_resetpasswordwithnid_label_newpasswordagain1">รหัสผ่านใหม่ ,.new password</string>
    <string name="lang_th_resetpasswordwithnid_label_newpasswordagain2">รหัสผ่านใหม่อีกครั้ง ,.new password again</string>
    <string name="lang_th_resetpasswordwithnid_label_newpasswordagain2_button_submit">ยืนยันข้อมูล ,.Submit</string>
    <string name="lang_th_forgetpassword_termsandconditions_topic">เงื่อนไข และ ข้อตกลง</string>
    <string name="lang_th_forgetpassword_termsandconditions_content">ชื่อ และที่อยู่ ที่ใช้ในการลงทะเบียน (ภ.อ.01) เป็นชื่อและที่อยู่ที่ประสงค์จะใช้ในการยื่นแบบ ภ.ง.ด.94 ทางอินเทอร์เน็ต และจะต้องเป็นชื่อและที่อยู่ ที่สามารถติดต่อได้ เนื่องจากกรมสรรพากร จะส่งใบเสร็จรับเงิน ให้ตามที่อยู่ดังกล่าว</string>
    <string name="lang_th_forgetpassword_termsandconditions_content2">ข้อมูลผู้ใช้ทั่วไป</string>
    <string name="lang_th_forgetpassword_termsandconditions_btAccept">ยอมรับ</string>
    <string name="lang_th_forgetpassword_termsandconditions_btCancel">ยกเลิก</string>
    <string name="txRegister">สมัคร ,.Register</string>
    <string name="txInfoSystem">ข้อมูลเพื่อเข้าใช้ระบบ</string>
    <string name="txConPassword">ระบุรหัสผ่านอีกครั้ง</string>
    <string name="txInfoForgot">ข้อมูลกรณีลืมรหัสผ่าน</string>
    <string name="txEmail">อีเมล</string>
    <string name="txDate">วัน/เดือน/ปีเกิด</string>
    <string name="txQuestion">คำถาม</string>
    <string name="txAns">คำตอบ</string>
    <string name="txInfoPeople">ข้อมูลส่วนบุคคล</string>
    <string name="txName">ชื่อ (ไม่ต้องระบุคำนำหน้าชื่อ)</string>
    <string name="txMiddleName">ชื่อกลาง</string>
    <string name="txSurName">ชื่อสกุล</string>
    <string name="lang_th_register_message_bthintpassword">โปรดใส่รหัสผ่าน ,.please enter your password</string>
    <string name="lang_th_register_message_bthintpassword_again">โปรดใส่รหัสผ่านอีกครั้งหนึ่ง ,.please enter your password again</string>
    <string name="lang_th_register_telephone">เบอร์โทรศัพท์มือถือ</string>
    <string name="lang_th_register_telephoneExtension">เบอร์ต่อโทรศัพท์</string>
    <string name="lang_th_register_fatherName">ชื่อและชื่อสกุลบิดา</string>
    <string name="lang_th_register_motherName">ชื่อและชื่อสกุลมารดา</string>
    <string name="lang_th_register_passportNo">เลขที่หนังสือเดินทาง(กรณีต่างชาติ)</string>
    <string name="lang_th_register_countryCode">รหัสประเทศหนังสือเดินทาง (กรณีต่างชาติ)</string>
    <string name="lang_th_register_buildName">ชื่ออาคาร</string>
    <string name="lang_th_register_roomNo">ห้องเลขที่</string>
    <string name="lang_th_register_floorNo">ชั้นที่</string>
    <string name="lang_th_register_addressNo">บ้านเลขที่</string>
    <string name="lang_th_register_soi">ตรอก/ซอย</string>
    <string name="lang_th_register_village">ชื่อหมู่บ้าน</string>
    <string name="lang_th_register_mooNo">หมู่ที่</string>
    <string name="lang_th_register_street">ถนน</string>
    <string name="lang_th_register_province">จังหวัด</string>
    <string name="lang_th_register_amphur">อำเภอ</string>
    <string name="lang_th_register_tambol">ตำบล</string>
    <string name="lang_th_register_postcode">รหัสไปรษณีย์</string>
    <string name="lang_th_register_step3_confirm">ต่อไป</string>
</resources>