<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/lbTop"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:background="@android:color/darker_gray"
        android:orientation="horizontal" >

        <com.revenuedepartment.customview.TextViewCustom
            android:id="@+id/txTitleBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center_horizontal"
            android:text="@string/lang_th_forgetpassword_termsandconditions_topic"
            android:textColor="@android:color/black"
            android:textSize="25dp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbTop"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical" >

        <com.revenuedepartment.customview.TextViewCustom
            android:id="@+id/tvTermsAndConditions"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="ข้อมูลผู้ใช้ทั่วไป" />

        <com.revenuedepartment.customview.ButtonCustom
            android:id="@+id/btAccept"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lang_th_forgetpassword_termsandconditions_btAccept" />
        
        <com.revenuedepartment.customview.ButtonCustom
            android:id="@+id/btCancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lang_th_forgetpassword_termsandconditions_btCancel" />
    </LinearLayout>

</RelativeLayout>