<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >
    
    <com.revenuedepartment.customview.TopBar
        android:id="@+id/Topbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical" >
        
        <com.revenuedepartment.customview.TextViewCustom
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/lang_th_forgetpassword_step1_label_idcityzen"
            android:textColor="@android:color/black"
            android:textSize="20dp" />
        
        <com.revenuedepartment.customview.TextViewCustom
            android:id="@+id/mEditTextForgetPasswordStep1Idcityzen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:textColor="@android:color/black"
            android:maxLength="17"
            android:singleLine="true"
            android:text="" />
        
        <com.revenuedepartment.customview.TextViewCustom
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginBottom="0dp"
            android:layout_marginTop="20dp"
            android:text="@string/lang_th_forgetpassword_step1_label_birthdate"
            android:textColor="@android:color/black"
            android:textSize="20dp" />
        
        <!-- 
        <com.revenuedepartment.customview.EditTextCustom
            android:id="@+id/mEditTextForgetPasswordStep1Birthdate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|bottom"
            android:hint="@string/lang_th_forgetpassword_label_birthdate"
            android:maxLength="17"
            android:singleLine="true"
            android:text="" />
        -->
        
        <!-- <DatePicker
        android:id="@+id/mEditTextForgetPasswordStep1Birthdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" /> -->
        
        <com.revenuedepartment.customview.ButtonCustom
            android:id="@+id/btCalendar"
            android:background="@drawable/bg_dropdown"
            android:gravity="right"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="20dp"
            android:layout_above="@+id/mbuttonForgotPasswordStep1Submit"
            android:text="@string/lang_th_forgetpassword_step1_label_birthdate" />
        
        <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="match_parent"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:orientation="vertical" >
	        
	        <com.revenuedepartment.customview.ButtonCustom
	            android:id="@+id/mbuttonForgotPasswordStep1Submit"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_alignParentBottom="true"
	            android:layout_marginBottom="20dp"
	            android:text="@string/lang_th_forgetpassword_step1_button_submit" />
	        
        </RelativeLayout>
        
    </LinearLayout>
</LinearLayout>