<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <com.revenuedepartment.customview.TopBar
        android:id="@+id/Topbar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lbTop"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:orientation="vertical" >

        <com.revenuedepartment.customview.TextViewCustom
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            android:text="@string/lang_th_forgetpassword_forgetquestion_label_topic"
            android:textColor="@android:color/black"
            android:textSize="20dp" />

        

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >
	            
	            <com.revenuedepartment.customview.TextViewCustom
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/lang_th_forgetpassword_forgetquestion_label_name"
		            android:textColor="@android:color/black"
		            android:textSize="20dp" />
	            
	            <LinearLayout 
	                android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp" >
	
		            <com.revenuedepartment.customview.ButtonCustom
		                android:id="@+id/btHintThaiName"
		                android:background="@drawable/icon_hint"
		                style="?android:attr/buttonStyleSmall"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text=" " />
		            
		        </LinearLayout>
	        </RelativeLayout>
	        
          <com.revenuedepartment.customview.EditTextCustom
              android:id="@+id/mEditTextForgetQuestionThaiName"
              android:background="@drawable/bg_dropdown"
              android:gravity="right"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:maxLength="17"
              android:singleLine="true"
              android:text="" />
	            
        </LinearLayout>

        

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >
            
	            <com.revenuedepartment.customview.TextViewCustom
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="20dp"
		            android:layout_marginTop="20dp"
		            android:text="@string/lang_th_forgetpassword_forgetquestion_label_sername"
		            android:textColor="@android:color/black"
		            android:textSize="20dp" />
	
	            <LinearLayout 
	                android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp" >
	
		            <com.revenuedepartment.customview.ButtonCustom
		                android:id="@+id/btHintThaiSername"
		                android:background="@drawable/icon_hint"
		                style="?android:attr/buttonStyleSmall"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text=" " />
		            
		        </LinearLayout>
		        
	        </RelativeLayout>
	        
          <com.revenuedepartment.customview.EditTextCustom
              android:id="@+id/mEditTextForgetQuestionThaiSername"
              android:background="@drawable/bg_dropdown"
              android:gravity="right"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:maxLength="17"
              android:singleLine="true"
              android:text="" />
	            
        </LinearLayout>

        

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >
	            
                
	            <com.revenuedepartment.customview.TextViewCustom
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/lang_th_forgetpassword_forgetquestion_label_fathername"
		            android:textColor="@android:color/black"
		            android:textSize="20dp" />
	            
	            <LinearLayout 
	                android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp" >
	
		            <com.revenuedepartment.customview.ButtonCustom
		                android:id="@+id/btHintThaiFathername"
		                android:background="@drawable/icon_hint"
		                style="?android:attr/buttonStyleSmall"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text=" " />
		            
	        	</LinearLayout>
	        	
	        </RelativeLayout>
	        
          <com.revenuedepartment.customview.EditTextCustom
              android:id="@+id/mEditTextForgetQuestionThaiFathername"
              android:background="@drawable/bg_dropdown"
              android:gravity="right"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:maxLength="17"
              android:singleLine="true"
              android:text="" />
	            
        </LinearLayout>

        

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" >

	            <com.revenuedepartment.customview.TextViewCustom
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginBottom="20dp"
		            android:layout_marginTop="20dp"
		            android:text="@string/lang_th_forgetpassword_forgetquestion_label_mothername"
		            android:textColor="@android:color/black"
		            android:textSize="20dp" />
            
	            <LinearLayout 
	                android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingTop="20dp"  >
	
	        	    <com.revenuedepartment.customview.ButtonCustom
		                android:id="@+id/btHintThaiMothername"
		                android:background="@drawable/icon_hint"
		                style="?android:attr/buttonStyleSmall"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:text=" " />
	        	    
	        	</LinearLayout>
	        	
	        </RelativeLayout>
	        
          <com.revenuedepartment.customview.EditTextCustom
              android:id="@+id/mEditTextForgetQuestionThaiMothername"
              android:background="@drawable/bg_dropdown"
              android:gravity="right"
              android:layout_width="fill_parent"
              android:layout_marginBottom="10dp"
              android:layout_height="wrap_content"
              android:maxLength="17"
              android:singleLine="true"
              android:text="" />
        </LinearLayout>

        <RelativeLayout
	        android:layout_width="fill_parent"
	        android:layout_height="match_parent"
	        android:layout_marginLeft="20dp"
	        android:layout_marginRight="20dp"
	        android:orientation="vertical" >
            
	        <com.revenuedepartment.customview.ButtonCustom
	            android:id="@+id/mbuttonForgotPasswordHaveEmailSubmit"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="10dp"
	            
	            android:layout_alignParentBottom="true"
		        android:layout_marginBottom="20dp"
	            android:text="@string/lang_th_forgetpassword_step1_button_submit" />
        
        </RelativeLayout>
        
    </LinearLayout>

</LinearLayout>